--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.reinaldo</groupId>
-	<artifactId>LetrasDeMusicas</artifactId>
+	<artifactId>letras-de-musicas</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>LetrasDeMusicas</name>
 	<description>Demo project for Spring Boot</description>
@@ -72,6 +72,9 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
+					<layers>
+						<enabled>true</enabled>
+					</layers>
 					<excludes>
 						<exclude>
 							<groupId>org.projectlombok</groupId>
